bug 19724 - sync screens don't auto overflow to show scrollbars
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@17163 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/purplerain/chrome/skin/feathers.css
+++ b/feathers/purplerain/chrome/skin/feathers.css
@@ -880,6 +880,9 @@ sb-displaypane-splitter[orient="horizontal"] > stack > box > #dropdown-button {
 *
 * The page that is displayed when the device node is clicked on - iPod, MTP
 ******************************************************************************/
+window > vbox#main_box {
+  overflow: auto;
+}
 /* the top half of the summary page + background for tabs (ipod only) */
 #overall_device_info_box,
 #device_management_tabs {
